5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4085/executions/1602_1016.log
== TEST (2019-03-27 19:26:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
-- OUTPUT:
PRIMEIRO_CASO_DE_TESTE
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:29:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
s = (lado1 + lado2 + lado3)/2

from math import *
print(sqrt())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(sqrt())
TypeError: sqrt() takes exactly one argument (0 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:32:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5)
-- ERROR:
File "XXXX", line 12
    print(round(A, 5)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:32:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5))
-- ERROR:
File "XXXX", line 12
    print(round(A, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:33:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5))
-- ERROR:
File "XXXX", line 12
    print(round(A, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:36:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5))
-- ERROR:
File "XXXX", line 12
    print(round(A, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:36:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5))
-- ERROR:
File "XXXX", line 12
    print(round(A, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:40:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5))
-- ERROR:
File "XXXX", line 12
    print(round(A, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:41:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5)
-- ERROR:
File "XXXX", line 12
    print(round(A, 5)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:43:04) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round (A, 5))
-- ERROR:
File "XXXX", line 12
    print(round (A, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:43:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5))
-- EXECUTION TIME:
0.139192
-- ERROR:
  File "/home/codebench/codes/1602/1016/main.py", line 12
    print(round(A, 5))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:45:29) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3)

print(round(A, 5))
-- ERROR:
File "XXXX", line 12
    print(round(A, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:46:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3))

print(round(A, 5))
-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:46:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

lado1 = float(input("digite o valor do lado"))
lado2 = float(input("digite o valor do lado"))
lado3 = float(input("digite o valor do lado"))
from math import *
s = (lado1 + lado2 + lado3)/2
A = sqrt(s*(s - lado1)*(s - lado2)*(s - lado3))

print(round(A, 5))
-- EXECUTION TIME:
0.191385
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
